--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	tzapu/WiFiManager@^0.16.0
 	hieromon/AutoConnect@^1.3.4
 	makuna/NeoPixelBus@^2.6.9
+build_flags = '-DPSK="fceampel"' '-DWEB_USER="fce"' '-DWEB_PASS="fceampel"'
