--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,16 @@ lib_deps =
 	hieromon/AutoConnect@^1.3.4
 	makuna/NeoPixelBus@^2.6.9
 build_flags = '-DPSK="fceampel"' '-DWEB_USER="fce"' '-DWEB_PASS="fceampel"'
+
+[env:nodemcuv2]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+monitor_speed = 115200
+board_build.filesystem = littlefs
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	tzapu/WiFiManager@^0.16.0
+	hieromon/AutoConnect@^1.3.4
+	makuna/NeoPixelBus@^2.6.9
+build_flags = '-DPSK="fceampel"' '-DWEB_USER="fce"' '-DWEB_PASS="fceampel"'
