--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:d1_mini_pro]
-platform = espressif8266
+platform = espressif8266@4.0.1
 board = d1_mini_pro
 framework = arduino
 monitor_speed = 115200
@@ -17,12 +17,12 @@ board_build.filesystem = littlefs
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	tzapu/WiFiManager@^0.16.0
-	hieromon/AutoConnect@^1.3.4
 	makuna/NeoPixelBus@^2.6.9
+	hieromon/AutoConnect@^1.4.2
 build_flags = '-DPSK="fceampel"' '-DWEB_USER="fce"' '-DWEB_PASS="fceampel"'
 
 [env:nodemcuv2]
-platform = espressif8266
+platform = espressif8266@4.0.1
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
@@ -30,6 +30,6 @@ board_build.filesystem = littlefs
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	tzapu/WiFiManager@^0.16.0
-	hieromon/AutoConnect@^1.3.4
 	makuna/NeoPixelBus@^2.6.9
+	hieromon/AutoConnect@^1.4.2
 build_flags = '-DPSK="fceampel"' '-DWEB_USER="fce"' '-DWEB_PASS="fceampel"'
